# emu68-xhci-driver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: toolchain.cmake
driver/: CMakeLists.txt
driver/include/: ch9.h  usb.h  usb_defs.h  xhci.h
driver/src/: xhci-mem.c  xhci-ring.c  xhci.c
xhci.device/: CMakeLists.txt
xhci.device/include/: config.h  device.h  usb_glue.h
xhci.device/include/devices/: usbhardware.h
xhci.device/include/xhci/: ch9.h  usb.h  usb_defs.h  xhci-commands.h  xhci-context.h  xhci-debug.h  xhci-descriptors.h  xhci-endpoint.h  xhci-events.h  xhci-ring.h  xhci-root-hub.h  xhci-td.h  xhci-udev.h  xhci-usb.h  xhci.h
xhci.device/src/: device.c  device_abortio.c  device_beginio.c  device_end.c  irq.c  unit.c  unit_commands.c  unit_task.c  usb_glue.c
xhci.device/src/xhci/: xhci-commands.c  xhci-context.c  xhci-debug.c  xhci-descriptors.c  xhci-endpoint.c  xhci-events.c  xhci-mem.c  xhci-ring.c  xhci-root-hub.c  xhci-td.c  xhci-udev.c  xhci-usb.c  xhci.c
